--- a/Hotel.css
+++ b/Hotel.css
@@ -40,7 +40,7 @@ select{
         width: 250px;
         height: 10%auto;
         float: left;
-        margin-top: 10%;
+        margin-top: 10px;
         margin-left: 2.5%;
         margin-right: 2.5%;
         padding: 5px;
